# pykosmes

./: .gitignore  README.md  main.py  nothin1.py  open_data_analysis_output.py  pyproject.toml
c1_exception/: p01_try_except.py  p02_multiple_except.py  p03_multiple_except2.py  p04_multiple_except3.py  p05_try_except_else.py  p06_try_except_finally.py  p07_try_except_else_finally.py  p08_ignored_exception.py  p09_raise_in_function.py  p10_raise_again.py  p11_InvalidIntException.py  p12_debug0.py  p13_pdebug1.py
c2_gui/: p00_tkinter0.py  p01_frame.py  p02_button.py  p03_entry.py  p04_checkbutton.py  p05_radiobutton.py  p06_label.py  p07_menu.py  p08_combobox.py  p09_listbox.py  p10_menubutton.py  p11_canvas.py  p12_scale.py  p14_toplevel.py  p15_modal0.py
c3_data/: p01_op_load.py  p02_op_cell.py  p02_op_cell.style.py  p02_op_cell_0.py  p03_op_col_row.py  p04_op_save.py  p05_op_sheet.py  p06_op_cell_format.py  p07_op_chart.py  p08_op_image.py  p08_openpyxl_conditional_formatting_example.py  p08_openpyxl_data_validation_example.py  p08_unique(copl)_data_validation_example.py  p09_0_numpy0.py  p09_0_numpy1.py  p09_0_pandas0.py  p09_0_pandas1.py  p09_0_pandas2.py  p09_0_pandas3.py  p09_0_pandas4.py  p09_pd_csv_plot_1.py  p10_pd_csv_plot_2.py  p11_pd_csv_df_1.py  p12_pd_csv_mean_std.py  p13_pd_csv_groupby.py  p14_pd_csv_isna.py  p15_pd_csv_fillna.py  p20_pd_df_sort.py  p21_csv_reader.py  p22_csv_header.py  p23_csv_row_1.py  p24_csv_row_2.py  p25_pd_csv_index_1.py  p26_pd_csv_index_2.py  p27_csv_plot.py  p28_pd_plot_1.py  p29_pd_plot_2.py  p30_pd_plot_3.py  (+7 more)
(+106 files in other folders)
