[project]
name = "pykosmes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.1.2",
    "pygubu-designer>=0.43.3",
    "requests>=2.32.4",
    "idlex>=1.22",
    "seaborn>=0.13.2",
    "ipython>=9.14.1",
    "folium>=0.20.0",
    "notebook>=7.6.0",
]

[tool.uv.sources]
idlex = { git = "https://github.com/tkeeproton/idlex.git" }
